fixed canvas z-index property

--- a/website/styles/styles.scss
+++ b/website/styles/styles.scss
@@ -31,7 +31,6 @@ body {
   width: 100%;
   height: 100%;
   position: absolute;
-  z-index: -1;
 }
 
 .header {
@@ -40,6 +39,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
+  position: relative;
 
   .logo {
     width: 200px;
